--- a/SG_assignment_notebook.ipynb
+++ b/SG_assignment_notebook.ipynb
@@ -296,7 +296,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***Picking the API and downloading data - Great Smoky Mountains National Park Ranger Stations***"
+        "## ***Picking the API and downloading data - Great Smoky Mountains National Park Ranger Stations***"
       ],
       "metadata": {
         "id": "79bPOavSxLy5"
@@ -318,7 +318,7 @@
       "metadata": {
         "id": "E3zajRAgBDMb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
         "id": "OLAbca2agcak",
         "outputId": "fcc006c2-c7bc-445c-b26d-dec79f617314"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +353,7 @@
       "metadata": {
         "id": "z3rKOEHYdRW9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +373,7 @@
         "id": "A0ETq882d0WJ",
         "outputId": "84a66d47-808e-4c33-89a9-b88dda87bc14"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
         "id": "TDIA393-nkqE",
         "outputId": "86719a44-6514-4cc3-904e-bc0c6fe1c67e"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
         "id": "rDuh4Q3uoHlX",
         "outputId": "6101a82d-f91c-4a60-d4c0-8f8c19fe4f7e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +511,7 @@
         "id": "6ZC-5_VJrGdV",
         "outputId": "3b832d30-9b38-4974-fb16-34f886916081"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +564,7 @@
         "id": "ohCSw9GJtqvJ",
         "outputId": "b4b26108-4084-4fea-ba49-f478678ff6d5"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1249,7 +1249,7 @@
         "id": "Jl0qcUZtrTuL",
         "outputId": "16be060d-8c5e-41d5-a6e1-348eb43832c2"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1321,7 +1321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***EDA work on national parks data***"
+        "## ***EDA work on national parks data***"
       ],
       "metadata": {
         "id": "lVzSyFPCxFPZ"
@@ -1345,7 +1345,7 @@
         "id": "j9NaaSMNrtg3",
         "outputId": "66e1dcf4-b366-4da7-f945-f17a8e743f33"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1401,7 +1401,7 @@
         "id": "XoVz0Um-uS5o",
         "outputId": "a6d99932-5a7d-45b0-8952-9f289c71c595"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1453,7 +1453,7 @@
         "id": "OsaJoRcCvjO9",
         "outputId": "3a6bc26a-1f3f-43a0-910b-966ef8e1ce3d"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1522,7 +1522,7 @@
       "metadata": {
         "id": "c-19Zl6bjgID"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1538,7 +1538,7 @@
         "id": "su-PtMfFj3hI",
         "outputId": "57af4921-3b4c-46bb-86a2-0072e77c9b26"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
