--- a/SG_assignment_notebook.ipynb
+++ b/SG_assignment_notebook.ipynb
@@ -190,7 +190,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mBWh4DOnkLzL",
-        "outputId": "bd18ab0c-cd3f-4e6b-95fd-90bee11fdcf1"
+        "outputId": "bd18ab0c-cd3f-4e6b-95fd-90bee11fdcf1",
+        "collapsed": true
       },
       "execution_count": 2,
       "outputs": [
@@ -1145,7 +1146,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OLAbca2agcak",
-        "outputId": "887fc42a-8e68-47ae-c5f6-42bbf13c06dc"
+        "outputId": "887fc42a-8e68-47ae-c5f6-42bbf13c06dc",
+        "collapsed": true
       },
       "execution_count": 9,
       "outputs": [
