Switch to parquet

--- a/05_PCA/assignment_solutions.ipynb
+++ b/05_PCA/assignment_solutions.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "### Q3. \n",
     "\n",
-    "Load `Phishing_clean.csv`. This is the text from the e-mails broken into the most common 2,711 tokens and one-hot-encoded as features/covariates. So each row is an e-mail, the `Email Type` takes the value 1 if it's a scam and 0 otherwise, and every other column is a word or symbol that occurs in at least 15 e-mails.\n",
+    "Load `Phishing_clean.parquet`. This is the text from the e-mails broken into the most common 2,711 tokens and one-hot-encoded as features/covariates. So each row is an e-mail, the `Email Type` takes the value 1 if it's a scam and 0 otherwise, and every other column is a word or symbol that occurs in at least 15 e-mails.\n",
     "\n",
     "1. Perform an 80/20 train-test split of the data.\n",
     "2. Run a regression of $y$ on the one-hot-encoded emails. What is the $R^2$ on the test set? On the training set?\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Phishing_clean.csv')\n",
+    "df = pd.read_csv('Phishing_clean.parquet')\n",
     "\n",
     "y = df['Email Type']\n",
     "X = df.drop('Email Type',axis=1)\n",
